Update security v2.1